force-app/main/default/objects/Lifecycle_Transition__mdt/Lifecycle_Transition__mdt.object-meta.xml
<CustomObject>
    <description>BR-15, PD-12. The governed set of Lead lifecycle stage transitions that are allowed. THE SINGLE EXECUTABLE POLICY: the future preventive safeguard in Lead_Inbound_Before_Save and the future NorthstarIQ detective control both read these records, so an allowed transition is defined once and consumed twice. A transition absent from this type is not allowed - the policy is a whitelist, and silence is a refusal rather than an omission. Editable without deployment.</description>
    <label>Lifecycle Transition</label>
    <pluralLabel>Lifecycle Transitions</pluralLabel>
</CustomObject>