force-app/main/default/objects/Lifecycle_Transition__mdt/fields/From_Stage__c.field-meta.xml
<CustomField>
    <fullName>From_Stage__c</fullName>
    <description>The exact Lead.Status value the transition starts from. Matched on exact equality against the prior value of Status.</description>
    <inlineHelpText>The Lead Status this transition starts from.</inlineHelpText>
    <label>From Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>