force-app/main/default/objects/Lifecycle_Transition__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <description>Whether this transition is currently allowed. Unchecking withdraws the transition while keeping the record, so a policy that once applied stays visible as configuration history.</description>
    <inlineHelpText>Whether this transition is currently allowed.</inlineHelpText>
    <label>Is Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>