force-app/main/default/objects/Lifecycle_Transition__mdt/fields/Rule_Version__c.field-meta.xml
<CustomField>
    <fullName>Rule_Version__c</fullName>
    <description>Version recorded on records evaluated under this policy, so a historical decision stays interpretable after the policy changes.</description>
    <inlineHelpText>Version recorded on records evaluated under this policy.</inlineHelpText>
    <label>Rule Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>