force-app/main/default/objects/Lifecycle_Transition__mdt/fields/To_Stage__c.field-meta.xml
<CustomField>
    <fullName>To_Stage__c</fullName>
    <description>The exact Lead.Status value the transition moves to. Matched on exact equality against the new value of Status.</description>
    <inlineHelpText>The Lead Status this transition moves to.</inlineHelpText>
    <label>To Stage</label>
    <length>40</length>
    <type>Text</type>
</CustomField>